fix misaligned padding

--- a/components/PreviewModal/PreviewModal.module.scss
+++ b/components/PreviewModal/PreviewModal.module.scss
@@ -7,7 +7,7 @@
     transform: translate(-50%, -50%);
     width: 90vw;
     max-width: 800px;
-    padding-top: 3rem;
+    // padding-top: 3rem;
     background-color: #fff;
 
     // change below
@@ -15,7 +15,7 @@
     border: 1px solid #ccc;
     overflow: auto;
     outline: none;
-    padding: 20px;
+    padding: 3rem 20px 20px;
     position: absolute;
 }
 
